# HW_task

./: README.md  pyproject.toml
.github/workflows/: test.yaml
src/: task_1_v2
src/hw_task/: task_1.py
tests/: tests.py
workflows/: tests.yaml
